// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications.vue should render when there is more than one notification 1`] = `
<div class="Notification"><span name="Transition" tag="p"><v-alert-stub value="true" type="error">
      Il y a eu un problème...
    </v-alert-stub><v-alert-stub value="true" type="success">
      Yeaaaaah !!!
    </v-alert-stub></span></div>
`;

exports[`Notifications.vue should render when there is no notifications 1`] = `<div class="Notification"><span name="Transition" tag="p"></span></div>`;

exports[`Notifications.vue should render when there is one notification 1`] = `
<div class="Notification"><span name="Transition" tag="p"><v-alert-stub value="true" type="error">
      Il y a eu un problème...
    </v-alert-stub></span></div>
`;
